--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
     <!-- woman jacket section -->
     <section>
-      <h1>Woman jacket</h1>
-      <div class="woman-jacket-section">
+      <h1>Woman Jacket</h1>
+      <div class="jacket-section">
         <div class="single-jacket">
           <div class="jacket-img">
             <img src="/images/jacket-1.png" alt="" />
@@ -70,7 +70,7 @@
 
         <div class="single-jacket">
           <div class="jacket-img">
-            <img src="/images/jacket-1.png" alt="" />
+            <img src="/images/jacket-2.png" alt="" />
           </div>
           <h2>Yellow Coat Jacket</h2>
           <p>
@@ -85,7 +85,7 @@
 
         <div class="single-jacket">
           <div class="jacket-img">
-            <img src="/images/jacket-1.png" alt="" />
+            <img src="/images/jacket-3.png" alt="" />
           </div>
           <h2>Yellow Coat Jacket</h2>
           <p>
@@ -100,5 +100,99 @@
         </div>
       </div>
     </section>
+
+    <!-- man jacket section -->
+
+    <section>
+      <h1>Man Jacket</h1>
+      <div class="jacket-section">
+        <div class="single-jacket">
+          <div class="jacket-img">
+            <img src="/images/jacket-4.png" alt="" />
+          </div>
+          <h2>Yellow Coat Jacket</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde,
+            fugit.
+          </p>
+          <div class="price">
+            <h3>$249</h3>
+            <button class="buy-now-btn">Buy Now</button>
+          </div>
+        </div>
+
+        <div class="single-jacket">
+          <div class="jacket-img">
+            <img src="/images/jacket-5.png" alt="" />
+          </div>
+          <h2>Yellow Coat Jacket</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde,
+            fugit.
+          </p>
+          <div class="price">
+            <h3>$249</h3>
+            <button class="buy-now-btn">Buy Now</button>
+          </div>
+        </div>
+
+        <div class="single-jacket">
+          <div class="jacket-img">
+            <img src="/images/jacket-6.png" alt="" />
+          </div>
+          <h2>Yellow Coat Jacket</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde,
+            fugit.
+          </p>
+          <div class="price">
+            <h3>$249</h3>
+            <button class="buy-now-btn">Buy Now</button>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- about section -->
+
+    <section>
+      <div class="about-section">
+        <div class="">
+          <div class="about-section-left-part">
+            <img src="/images/house.png" alt="">
+            <div>
+              <h2>Find The Perfect Fit</h2>
+            <p>Everybody is different, Which is why we offer style for everybody</p>
+            </div>
+          </div>
+          <div class="about-section-left-part">
+            <img src="/images/question.png" alt="">
+           <div>
+             <h2>Find The Perfect Fit</h2>
+            <p>Everybody is different, Which is why we offer style for everybody</p>
+           </div>
+          </div>
+          <div class="about-section-left-part">
+            <img src="/images/box.png" alt="">
+            <div>
+              <h2>Find The Perfect Fit</h2>
+            <p>Everybody is different, Which is why we offer style for everybody</p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <img src="/images/shopping.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+      <div>
+        <p>all rights reserved to Shakil Islam © 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
