left side part edite

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/4d633270be.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- navbar -->
@@ -194,5 +195,3 @@
         <p>all rights reserved to Shakil Islam © 2022</p>
       </div>
     </footer>
-  </body>
-</html>
