used font-awesome

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                   Officiis ullam ea cum, ducimus quasi nulla soluta quo
                   expedita? Hic ipsa magni corporis expedita voluptate dolorum?
                 </p>
-                <button class="buy-now-btn">Buy Now</button>
+                <button class="buy-now-btn">
+                  <i class="fa-solid fa-cart-plus"></i>
+                  Buy Now</button>
               </div>
             </div>
             <div><img src="/images/model.png" alt="" /></div>
@@ -65,7 +67,9 @@
           </p>
           <div class="price">
             <h3>$249</h3>
-            <button class="buy-now-btn">Buy Now</button>
+            <button class="buy-now-btn">
+              <i class="fa-solid fa-cart-plus"></i>
+              Buy Now</button>
           </div>
         </div>
 
@@ -80,7 +84,9 @@
           </p>
           <div class="price">
             <h3>$249</h3>
-            <button class="buy-now-btn">Buy Now</button>
+            <button class="buy-now-btn">
+              <i class="fa-solid fa-cart-plus"></i>
+              Buy Now</button>
           </div>
         </div>
 
@@ -95,7 +101,9 @@
           </p>
           <div class="price">
             <h3>$249</h3>
-            <button class="buy-now-btn">Buy Now</button>
+            <button class="buy-now-btn">
+              <i class="fa-solid fa-cart-plus"></i>
+              Buy Now</button>
           </div>
         </div>
         </div>
@@ -118,7 +126,9 @@
           </p>
           <div class="price">
             <h3>$249</h3>
-            <button class="buy-now-btn">Buy Now</button>
+            <button class="buy-now-btn">
+              <i class="fa-solid fa-cart-plus"></i>
+              Buy Now</button>
           </div>
         </div>
 
@@ -133,7 +143,9 @@
           </p>
           <div class="price">
             <h3>$249</h3>
-            <button class="buy-now-btn">Buy Now</button>
+            <button class="buy-now-btn">
+              <i class="fa-solid fa-cart-plus"></i>
+              Buy Now</button>
           </div>
         </div>
 
@@ -148,7 +160,9 @@
           </p>
           <div class="price">
             <h3>$249</h3>
-            <button class="buy-now-btn">Buy Now</button>
+            <button class="buy-now-btn">
+              <i class="fa-solid fa-cart-plus"></i>
+              Buy Now</button>
           </div>
         </div>
         </div>
@@ -177,7 +191,7 @@
           </div>
           <div class="about-section-left-part">
             <img src="/images/box.png" alt="">
-            <div>
+            <div class="left-side-text">
               <h2>Find The Perfect Fit</h2>
             <p>Everybody is different, Which is why we offer style for everybody</p>
             </div>
